// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollList /> should render when [noContainer=false] 1`] = `
.c0 {
  padding-bottom: 20px;
  position: relative;
  z-index: 0;
}

<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  isElement={true}
  noContainer={false}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <ScrollList__StyledScrollList>
    <div
      className="c0"
    />
  </ScrollList__StyledScrollList>
</ScrollList>
`;

exports[`<ScrollList /> should return LoadingPlaceholder when [documents=null] and [page<pageCount] 1`] = `
.c2 {
  -webkit-animation: dzGqrz 0.75s 0s infinite linear;
  animation: dzGqrz 0.75s 0s infinite linear;
  border: 2px solid;
  border-bottom-color: transparent !important;
  border-radius: 100%;
  background: transparent;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  display: inline-block;
  height: 22px;
  width: 22px;
}

.c1 {
  margin-top: 20px;
  text-align: center;
}

.c0 {
  padding-bottom: 20px;
  position: relative;
  z-index: 0;
}

<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  documents={null}
  isElement={true}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <ScrollList__StyledScrollList>
    <div
      className="c0"
    >
      <LoadingPlaceholder
        margin="20px"
      >
        <LoadingPlaceholder__StyledLoadingPlaceholder
          margin="20px"
        >
          <div
            className="c1"
          >
            <Loader>
              <Loader__StyledLoader
                color="greyDark"
                size="22px"
              >
                <div
                  className="c2"
                  color="greyDark"
                  size="22px"
                >
                  <div />
                </div>
              </Loader__StyledLoader>
            </Loader>
          </div>
        </LoadingPlaceholder__StyledLoadingPlaceholder>
      </LoadingPlaceholder>
    </div>
  </ScrollList__StyledScrollList>
</ScrollList>
`;

exports[`<ScrollList /> should return React.Fragment when [noContainer=true] 1`] = `
.c0 {
  padding-bottom: 20px;
  position: relative;
  z-index: 0;
}

<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  isElement={true}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <ScrollList__StyledScrollList>
    <div
      className="c0"
    />
  </ScrollList__StyledScrollList>
</ScrollList>
`;
